--- a/react/index.html
+++ b/react/index.html
@@ -67,10 +67,10 @@
 
     (function() {
       var container = document.getElementById('container');
-      var search = window.location.search;
-      // URL에 "?=" 뒤에 base64 인코딩된 코드가 있으면 실행
-      if (search.startsWith("?=") && search.length > 2) {
-        var encodedCode = search.substring(2);
+      var hash = window.location.hash;
+      // URL에 "#=" 뒤에 base64 인코딩된 코드가 있으면 실행
+      if (hash.startsWith("#=") && hash.length > 2) {
+        var encodedCode = hash.substring(2);
         var code = base64DecodeUnicode(encodedCode);
         // React가 마운트될 루트 엘리먼트를 생성 (코드 내에서 ReactDOM.render 등으로 사용)
         var rootDiv = document.createElement('div');
@@ -112,8 +112,8 @@
             return;
           }
           var encoded = base64EncodeUnicode(code);
-          // 현재 URL의 origin과 pathname을 사용하여 "?=" + 인코딩된 코드로 이동
-          window.location.href = window.location.origin + window.location.pathname + "?=" + encoded;
+          // 현재 URL의 origin과 pathname을 사용하여 "#=" + 인코딩된 코드로 이동
+          window.location.href = window.location.origin + window.location.pathname + "#=" + encoded;
         });
       }
     })();
